--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fluentui/web-components": "^2.5.15",
     "@microsoft/fast-element": "^1.12.0",
     "date-fns": "^2.30.0",
+    "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "pinia": "^2.0.36",
     "vue": "^3.3.2",
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
     "@tsconfig/node18": "^2.0.1",
+    "@types/lodash": "^4.14.195",
     "@types/node": "^18.16.8",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/eslint-config-typescript": "^11.0.3",
