--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "@floating-ui/vue": "^1.0.1",
     "@fluentui/web-components": "^2.5.15",
     "@microsoft/fast-element": "^1.12.0",
+    "@typescript-eslint/eslint-plugin": "^5.60.0",
+    "@typescript-eslint/parser": "^5.60.0",
     "date-fns": "^2.30.0",
+    "eslint-config-prettier": "^8.8.0",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "pinia": "^2.0.36",
     "vue": "^3.3.2",
+    "vue-eslint-parser": "^9.3.1",
     "vue-router": "^4.2.0"
   },
   "devDependencies": {
@@ -30,9 +34,11 @@
     "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/tsconfig": "^0.4.0",
     "eslint": "^8.39.0",
-    "eslint-plugin-vue": "^9.11.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vue": "^9.15.0",
     "jsdom": "^22.0.0",
     "npm-run-all": "^4.1.5",
+    "prettier": "^2.8.8",
     "typescript": "~5.0.4",
     "vite": "^4.3.5",
     "vue-tsc": "^1.6.4"
