--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@floating-ui/vue": "^1.0.1",
     "@fluentui/web-components": "^2.5.15",
     "@microsoft/fast-element": "^1.12.0",
+    "dayjs": "^1.11.8",
     "date-fns": "^2.30.0",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
