--- a/package.json
+++ b/package.json
@@ -11,38 +11,41 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --ignore-path .gitignore"
   },
   "dependencies": {
+    "@azure/core-http": "^3.0.2",
+    "@azure/msal-browser": "^2.37.1",
+    "@azure/storage-blob": "^12.14.0",
     "@floating-ui/vue": "^1.0.1",
     "@fluentui/web-components": "^2.5.15",
     "@microsoft/fast-element": "^1.12.0",
-    "dayjs": "^1.11.8",
     "date-fns": "^2.30.0",
+    "dayjs": "^1.11.9",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
-    "pinia": "^2.0.36",
+    "pinia": "^2.1.4",
     "vue": "^3.3.2",
-    "vue-router": "^4.2.0"
+    "vue-router": "^4.2.2"
   },
   "devDependencies": {
     "@babel/types": "^7.22.5",
-    "@rushstack/eslint-patch": "^1.2.0",
+    "@rushstack/eslint-patch": "^1.3.2",
     "@tsconfig/node18": "^2.0.1",
     "@types/lodash": "^4.14.195",
-    "@types/node": "^18.16.8",
-    "@typescript-eslint/eslint-plugin": "^5.60.0",
-    "@typescript-eslint/parser": "^5.60.0",
+    "@types/node": "^18.16.19",
+    "@typescript-eslint/eslint-plugin": "^5.61.0",
+    "@typescript-eslint/parser": "^5.61.0",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/tsconfig": "^0.4.0",
-    "eslint": "^8.39.0",
+    "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-vue": "^9.15.0",
-    "jsdom": "^22.0.0",
+    "eslint-plugin-vue": "^9.15.1",
+    "jsdom": "^22.1.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.8",
     "typescript": "~5.0.4",
-    "vite": "^4.3.5",
+    "vite": "^4.3.9",
     "vue-eslint-parser": "^9.3.1",
-    "vue-tsc": "^1.6.4"
+    "vue-tsc": "^1.8.3"
   }
 }
