--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fluentui/web-components": "^2.5.15",
     "@headlessui/vue": "^1.7.15",
     "@microsoft/fast-element": "^1.12.0",
+    "@vitejs/plugin-basic-ssl": "^1.0.1",
     "@vuepic/vue-datepicker": "^5.4.0",
     "@vueuse/core": "^10.2.1",
     "date-fns": "^2.30.0",
